# bit2_back

./: .gitignore  docker-compose.yaml
.github/workflows/: backend.yml
api/: .gitignore  Dockerfile.dev  pyproject.toml
api/ai/: install_torch.sh
api/bit2_api/: main.py
api/bit2_api/core/ports/: __init__.py  database_client_repository.py  game_result_repository.py  scraper_repository.py  session.py
api/bit2_api/core/use_cases/: __init__.py  extract_game_result.py
api/bit2_api/right_adapters/csv/: __init__.py  db.py  session.py
api/bit2_api/right_adapters/in_memory/: __init__.py  document_chunk_repository.py  document_repository.py  session_token_repository.py  user_repository.py  username_validation_code_repository.py  vector_document_chunk_repository.py
api/bit2_api/right_adapters/postgres/: db.py  session.py
api/bit2_api/utils_main/: configure_injections.py  conversions.py  create_app.py  get_dep_inject_config.py  scheduler.py  scheduler_v1.py
api/data/: 2025-03-31 00:23:18.927800-game_results.csv  final_df.pkl  game_results.csv
api/data/août 2023/: 2025-03-31T20:50:08.359657.pkl
api/data/août 2024/: 2025-04-03T09:29:14.312503.pkl
api/data/avril 2024/: 2025-03-31T20:34:06.674047.pkl
api/data/avril 2025/: 2025-04-03T09:13:11.093670.pkl
api/data/décembre 2023/: 2025-03-31T20:42:06.345296.pkl
api/data/décembre 2024/: 2025-03-31T20:18:06.856996.pkl
api/data/février 2024/: 2025-03-31T20:38:07.758165.pkl
api/data/février 2025/: 2025-04-03T08:58:31.939099.pkl
api/data/janvier 2024/: 2025-03-31T20:40:07.268148.pkl
api/data/janvier 2025/: 2025-04-03T09:19:16.939654.pkl
api/data/juillet 2023/: 2025-03-31T20:52:06.620573.pkl
api/data/juillet 2024/: 2025-03-31T20:28:08.391660.pkl
api/data/juin 2023/: 2025-03-31T20:54:06.585700.pkl
api/data/juin 2024/: 2025-03-31T20:30:06.634749.pkl
api/data/mai 2023/: 2025-03-31T20:56:05.824118.pkl
api/data/mai 2024/: 2025-03-31T20:32:06.320244.pkl
api/data/mars 2024/: 2025-03-31T20:36:06.143756.pkl
api/data/mars 2025/: 2025-04-03T09:15:11.387104.pkl
api/data/novembre 2023/: 2025-03-31T20:44:06.693952.pkl
api/data/novembre 2024/: 2025-03-31T20:20:11.443044.pkl
api/data/octobre 2023/: 2025-03-31T20:46:26.882250.pkl
api/data/octobre 2024/: 2025-03-31T20:22:07.524284.pkl
api/data/outputs/: 2025-04-03 10:05:04.106069.pkl  2025-04-03 10:22:07.637829.pkl
api/data/septembre 2023/: 2025-03-31T20:48:06.572042.pkl
api/data/septembre 2024/: 2025-03-31T20:24:08.948156.pkl
api/notebooks/: check.ipynb
(+32 files in other folders)
